Tailwind v4 移行: postcss.config.cjs 追加・index.css を @import 方式に変更 / PWAは開発中無効化

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Numata Lab Library App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- ▼ PWA 用に追記 -->
+    <!-- ここに追記 ↓↓↓ -->
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#4f46e5" />
+    <!-- ここまで ↑↑↑ -->
+
+    <title>沼田真一研究室 蔵書検索アプリ</title>
   </head>
   <body>
     <div id="root"></div>
